--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2289,24 +2289,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>128969.6125</td>\n",
+       "      <td>2.707570e+06</td>\n",
+       "      <td>3.272166e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>27315.25</td>\n",
+       "      <td>357421.8450</td>\n",
+       "      <td>6.563169e+06</td>\n",
+       "      <td>1.202290e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<pandas.core.groupby.DataFrameGroupBy object at 0x7f7d59968550>"
+       "                AllConversions      CostEUR   Impressions        Clicks\n",
+       "AllConversions                                                         \n",
+       "False                     0.00  128969.6125  2.707570e+06  3.272166e+05\n",
+       "True                  27315.25  357421.8450  6.563169e+06  1.202290e+06"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversio']]"
+    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversions','CostEUR','Impressions','Clicks','Criter']].sum()"
    ]
   },
   {
