--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -2302,13 +2302,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AllConversions</th>\n",
-       "      <th>CostEUR</th>\n",
        "      <th>Impressions</th>\n",
+       "      <th>CostEUR</th>\n",
        "      <th>Clicks</th>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th>Criteria</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AllConversions</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -2318,36 +2320,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>128969.6125</td>\n",
        "      <td>2.707570e+06</td>\n",
+       "      <td>128969.6125</td>\n",
        "      <td>3.272166e+05</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>159796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True</th>\n",
-       "      <td>27315.25</td>\n",
-       "      <td>357421.8450</td>\n",
        "      <td>6.563169e+06</td>\n",
+       "      <td>357421.8450</td>\n",
        "      <td>1.202290e+06</td>\n",
+       "      <td>27315.25</td>\n",
+       "      <td>8023</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                AllConversions      CostEUR   Impressions        Clicks\n",
-       "AllConversions                                                         \n",
-       "False                     0.00  128969.6125  2.707570e+06  3.272166e+05\n",
-       "True                  27315.25  357421.8450  6.563169e+06  1.202290e+06"
+       "                 Impressions      CostEUR        Clicks  AllConversions  \\\n",
+       "AllConversions                                                            \n",
+       "False           2.707570e+06  128969.6125  3.272166e+05            0.00   \n",
+       "True            6.563169e+06  357421.8450  1.202290e+06        27315.25   \n",
+       "\n",
+       "                Criteria  \n",
+       "AllConversions            \n",
+       "False             159796  \n",
+       "True                8023  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversions','CostEUR','Impressions','Clicks','Criter']].sum()"
+    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversions','CostEUR',\n",
+    "                                           'Impressions','Clicks',\n",
+    "                                           'Criteria']].aggregate({'AllConversions':sum,\n",
+    "                                                                   'CostEUR':sum,\n",
+    "                                                                   'Impressions':sum,\n",
+    "                                                                   'Clicks':sum,\n",
+    "                                                                   'Criteria':'count'})"
    ]
   },
   {
