--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -215,6 +215,7 @@
     "  SUM(Impressions) as Impressions,\n",
     "  SUM(ImpressionAssistedConversions) as ImpressionAssistedConversions,\n",
     "  SUM(Clicks) as Clicks,\n",
+    "  SUM()\n",
     "  SUM(IF(ClickAssistedConversionsOverLastClickConversions = 0, 0,\n",
     "  CASE\n",
     "    WHEN Conversions > 0 OR AllConversions > 0 THEN IF(AllConversions>Conversions,AllConversions,Conversions)*ClickAssistedConversionsOverLastClickConversions\n",
@@ -2283,9 +2284,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[df['AllConversions'] > 0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
