--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -191,6 +191,7 @@
     "  AVG(ImpressionAssistedConversions) as ImpressionAssistedConversions,\n",
     "  AVG(Clicks) as Clicks,\n",
     "  AVG(ClickAssistedConversions) as ClickAssistedConversions,  \n",
+    "  AVG(CTR) as CTR,\n",
     "  AVG(QualityScore) as QualityScore, \n",
     "  AVG(CostEUR) as CostEUR,\n",
     "  AVG(AllConversions) as AllConversions,\n",
@@ -215,7 +216,7 @@
     "  SUM(Impressions) as Impressions,\n",
     "  SUM(ImpressionAssistedConversions) as ImpressionAssistedConversions,\n",
     "  SUM(Clicks) as Clicks,\n",
-    "  SUM()\n",
+    "  SUM(Clicks)/SUM(Impressions) as CTR,\n",
     "  SUM(IF(ClickAssistedConversionsOverLastClickConversions = 0, 0,\n",
     "  CASE\n",
     "    WHEN Conversions > 0 OR AllConversions > 0 THEN IF(AllConversions>Conversions,AllConversions,Conversions)*ClickAssistedConversionsOverLastClickConversions\n",
@@ -254,13 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "df = bq.Query(monthly_keywords_performance).to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First of all let us identify the Brand Keywords assuming that they have at leat "
    ]
   },
   {
