--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +268,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## First of all let us identify the Brand Keywords assuming that they have at leat "
+    "First of all let us identify the Brand Keywords assuming that \n",
+    "- they have at least 10 impressions a month\n",
+    "- their CTR is higher the \"normal\""
    ]
   },
   {
