--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2328,7 +2328,12 @@
     }
    ],
    "source": [
-    "df[(df['Impressions']>10) & (df['CTR']>0.4)].sort_values(by='CostEUR',ascending=False)"
+    "df[(df['Impressions']>10) & (df['CTR']>0.4)].sort_values(by='CostEUR',ascending=False)[['AccountDescriptiveName',\n",
+    "                                                                                        'CampaignName',\n",
+    "                                                                                        'AdGroupName',\n",
+    "                                                                                        'Criteria',\n",
+    "                                                                                        'KeywordMatchType',\n",
+    "                                                                                        'CT']]"
    ]
   },
   {
