--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -1219,14 +1219,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f7d486db610>]], dtype=object)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAeIAAAFhCAYAAACszanVAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGqRJREFUeJzt3W9wVOX9/vFrk4BN2JAQSIBBEAmTQoW2VoYZgRGmiNjy\nJ/wpVOlAC0MZZkphRKGVX61j/8gU9Yk6dXSgopmxLVWhUJxpB6hQh4IWocgXaEohRlBCYENMSIBk\nc34PHAJsNpyTk939bHbfr0fu4dznvs69J3vtbuAYcBzHEQAAMJFhHQAAgHRGEQMAYIgiBgDAEEUM\nAIAhihgAAEMUMQAAhihiAAAMZVkHAOBu27Zt2rhxo06ePKlgMKhhw4apublZhw4dUiAQ0NWrVyVJ\n3bt3lySNGjVKTz75pCZOnKicnBxJUn5+vmbPnq0f/ehHZucBoC2KGEhyr776qtavX6+nnnpK48aN\nU7du3fTee+/pgw8+0KuvvipJevHFF1VZWal169a1jjtz5owCgYAOHDigQCCgI0eOaP78+RoxYoTG\njx9vdToAIlDEQBKrr6/X888/r9/85je6//77W7ePHz/ec5k6jqNAIKARI0Zo6NChOnHiBEUMJBF+\nRwwksYMHD6qpqemmEu6oa3exPXTokE6cOKGRI0fGKh6AGOATMZDELl68qPz8fGVk+HvP7DiO7r33\nXl25ckVXr17VqlWrNHr06BinBNAZfCIGklh+fr4uXryolpYWX+MDgYD279+vQ4cO6Sc/+Ylee+01\n1dfXxzglgM6giIEkdvfdd6tbt27asWOH72Nc+x3xD37wAw0YMEAbN26MXUAAnUYRA0ksGAxq+fLl\n+sUvfqEdO3bo8uXLam5u1p49e/Tss8+6jo/8v5wuWbJEZWVlunz5crwiA+ggfkcMJLmFCxeqsLBQ\nL730klatWqUePXpoxIgRWrp0qevYQCBw0+MJEyaoqKhImzZt0oIFC+IVGUAHBJzIt8xRvPzyy9q6\ndasyMjJUUlKitWvXtt44AAAA+Of61fSZM2e0adMmbd68Wdu2bVM4HNY777yTiGwAAKQ816+mg8Gg\nunXrpsbGRmVkZOjy5csqKipKRDYAAFKeaxHn5eVp0aJFmjBhgrKzszV27FiNGTMmEdkAAEh5rl9N\nf/LJJ9q4caP+/ve/6x//+IcaGhq0bdu2RGQDACDluX4i/uijj/SNb3xD+fn5kqRJkybp4MGDmjZt\nWrtjrv27RQB2ysvLNf/xN5STd/1XSQ2151S2dp5KSkoMkwG4kWsRDxkyRC+99JKuXLmi7t27a9++\nfa73qg0EAqqurotZSLRVWJjLGsdZV1/jUKheOXlFCvYa0GZ7spxXV1/jroJ1jr/CwlzfY12LeNiw\nYSotLdWsWbOUkZGhr3zlK5o7d67vCQEAwHWebuixePFiLV68ON5ZAABIO9ziEgAAQxQxAACGKGIA\nAAxRxAAAGKKIAQAwRBEDAGCIIgYAwBBFDACAIYoYAABDFDEAAIYoYgAADFHEAAAYoogBADBEEQMA\nYIgiBgDAEEUMAIAhihgAAEMUMQAAhihiAAAMUcQAABiiiAEAMEQRAwBgiCIGAMAQRQwAgCGKGAAA\nQxQxAACGKGIAAAxRxAAAGKKIAQAwRBEDAGAoy22HU6dO6ZFHHlEgEJDjOPrkk0+0YsUKLViwIBH5\nAABIaa5FfOedd2rLli2SpJaWFt13332aNGlS3IMBAJAOOvTV9N69ezVo0CD1798/XnkAAEgrrp+I\nb/TOO+9oypQp8cqSEOFwWBUVJ2/aNnjwEGVmZholQjqJdv2Fw2FJAWVmXn9fnA7XZDgcVnl5uUKh\n+pu2p8O5AzfyXMRNTU3atWuXHnvsMU/7Fxbm+g4VT+Xl5VrxzFbl5BVJkhpqz6ls7TyVlJQYJ+u4\nZF3jVBLrNY68/iTpwuljys7tHfNrsqYmGHV7QUEwKa6d8vJyzX/8jZvWoiv/PCa7ZHjOEZ3nIt6z\nZ4/uuusuFRQUeNq/urrOd6h4CoXqlZNXpGCvATdtS9a87SkszO1ymbuaeKxxtOuvobYqLtdk5CfN\nWB47FqKtxbXtyZAvlfB6EX+deaPj+XfE27dv19SpU31PBAAA2vJUxI2Njdq7dy9/WxoAgBjz9NV0\ndna29u3bF+8sAACkHe6sBQCAIYoYAABDFDEAAIYoYgAADFHEAAAYoogBADBEEQMAYIgiBgDAEEUM\nAIAhihgAAEMUMQAAhihiAAAMUcQAABiiiAEAMEQRAwBgiCIGAMAQRQwAgCGKGAAAQxQxAACGKGIA\nAAxRxAAAGKKIAQAwRBEDAGCIIgYAwBBFDACAIYoYAABDFDEAAIYoYgAADFHEAAAY8lTEdXV1Wr58\nub71rW9pypQp+ve//x3vXAAApIUsLzv9+te/1vjx4/X888+rublZly9fjncuAADSgusn4vr6ev3r\nX//S7NmzJUlZWVkKBoNxDwYAQDpwLeLTp0+rV69eevzxxzVz5kw98cQTfCIGACBGXIu4ublZR48e\n1bx587R582Z96Utf0iuvvJKIbAAApDzX3xH369dP/fr108iRIyVJkydP1vr1610PXFiY2/l0cVBT\n0/Zr9YKCYNLmvZWumLmrifUaR7v+oonFNdneXMlyvSd7vlTDmiYv1yLu06eP+vfvr1OnTunOO+/U\nvn37VFxc7Hrg6uq6mASMtVCoPuq2ZM3bnsLC3C6XuauJxxpHu/7a26+zc7c3V7Jc78meL5XwehF/\nnXmj4+lvTf/sZz/TY489pubmZg0cOFBr1671PSEAALjOUxEPGzZMb731VryzAACQdrizFgAAhihi\nAAAMUcQAABiiiAEAMEQRAwBgiCIGAMAQRQwAgCGKGAAAQxQxAACGKGIAAAxRxAAAGKKIAQAwRBED\nAGCIIgYAwBBFDACAIYoYAABDFDEAAIYoYgAADFHEAAAYoogBADBEEQMAYIgiBgDAEEUMAIAhihgA\nAEMUMQAAhihiAAAMUcQAABiiiAEAMEQRAwBgKMvLTt/85jcVDAaVkZGhrKwsvfnmm/HOBQBAWvBU\nxIFAQGVlZcrLy4t3HgAA0oqnr6Ydx1FLS0u8swAAkHY8FXEgENCiRYs0e/Zsbdq0Kd6ZAABIG56+\nmv7973+voqIihUIhLVy4UEOGDNGoUaPinQ3o8sLhsCoqTrY+rqz8OCbHCYfDkgLKzMxod5vfuQAk\nlqciLioqkiQVFBRo0qRJ+uijj1yLuLAwt/Pp4qCmJthmW0FBMGnz3kpXzNzVdHaNy8vLteKZrcrJ\n++Jn6MLpY+p9+3DXcZHXZLTjZOf2bn0cbVt7cyXL9R7tZ1FKnnyphjVNXq5F3NjYqJaWFvXo0UMN\nDQ167733tGzZMtcDV1fXxSRgrIVC9VG3JWve9hQW5na5zF1NLNY4FKpXTl6Rgr0GSJIaaqs8j7tx\n7mjHufFxtG3tzZUs13u0n8Vr25MhXyrh9SL+OvNGx7WIz58/r2XLlikQCCgcDmvatGkaN26c7wkB\nAMB1rkU8cOBA/fnPf05EFgAA0g531gIAwBBFDACAIYoYAABDFDEAAIYoYgAADFHEAAAYoogBADBE\nEQMAYIgiBgDAEEUMAIAhihgAAEMUMQAAhihiAAAMUcQAABiiiAEAMEQRAwBgiCIGAMAQRQwAgCGK\nGAAAQxQxAACGKGIAAAxRxAAAGKKIAQAwRBEDAGCIIgYAwBBFDACAIYoYAABDFDEAAIYoYgAADFHE\nAAAY8lzELS0tmjlzppYuXRrPPAAApBXPRfz666+ruLg4nlkAAEg7nor47Nmz2r17t+bMmRPvPAAA\npJUsLzs9/fTTWr16terq6uKdJ+GclhZVVn7cZvvgwUOUmZlpkChxwuGwKipO3rQtmc7bSz4/5xBt\njJdxaF+yXUvJlge4Fdcifvfdd9WnTx8NHz5c+/fv93zgwsLcTgWLl5qa4E2PG+uq9dwfzysn77PW\nbQ2151S2dp5KSkoSHa9DOrvG5eXlWvHMVuXkFUlKvvP2ks/POUSOudW4zq5x5PXmVUFB8Ka5/R7H\ny7Fjwc/z0N45xSJfsl/bFpL1NRkeivjDDz/Url27tHv3bl25ckWXLl3S6tWrtW7duluOq65Ozk/P\noVB9m205eUUK9hrQZr9kPQfpix+qzuYLherbnHsynbeXfH7OIdqYaONitcZ+x0WeZ6zE4zn2+zzE\nK1+yX9uJFotrGbfWmTc6rkW8cuVKrVy5UpL0/vvv63e/+51rCQMAAG/4d8QAABjy9Je1rhk9erRG\njx4drywAAKQdPhEDAGCIIgYAwBBFDACAIYoYAABDFDEAAIYoYgAADFHEAAAYoogBADBEEQMAYIgi\nBgDAEEUMAIAhihgAAEMUMQAAhihiAAAMUcQAABiiiAEAMEQRAwBgiCIGAMAQRQwAgCGKGAAAQxQx\nAACGKGIAAAxRxAAAGKKIAQAwRBEDAGCIIgYAwBBFDACAIYoYAABDFDEAAIay3Ha4evWqvve976mp\nqUlNTU2aOHGiVq5cmYhsAACkPNci7t69u15//XVlZ2crHA7r4Ycf1oEDB3TPPfckIh8AACnN01fT\n2dnZkr74dNzS0qK8vLy4hgIAIF14KuKWlhbNmDFDY8eO1ejRozV06NB45wIAIC24fjUtSRkZGdqy\nZYvq6+u1aNEivf/++xo9enTcQoXDYVVUnGyzTQooM/P6e4fBg4coMzMzbjlulSdR87e3FufPB1Vb\n2xjTLE5LiyorP24zV0fXPVrmeOWLfBzLYxcUfK3Dx4k8dz/5En2efp5Pt3HR5vEyl598XvjNAySC\npyK+JhgMavz48Tpy5IhrERcW5voOVV5erhXPbFVOXlHrtgunjyk7t3frtobacypbO08lJSUdOnZN\nTdDTfgUFwdZziJbH7/wdlci1aKyr1nN/PK+cvM86NVdk5njn63378Jv2u/G583LcaMf+InOww5kj\nzz1aPjdez9OP6OfZsecz2jgvz5XbGL/5ovGTJ9V15jUZ8eVaxKFQSN26dVNubq4uX76svXv3atmy\nZa4Hrq6u8x0qFKpXTl6Rgr0GtG5rqK1qsy0Uqu/wPKFQvef9rh07Wh6/83dUotciFnNFyxzPfNHG\nueWLJtpz7CfzjceJls8LL+fpVyyez8hxXp4rL2P85Gsvc0fzpLLCwty0OE9LnXmj41rE1dXV+ulP\nfyrHcdTS0qLS0lLde++9vicEAADXuRbxl7/8ZW3evDkRWQAASDvcWQsAAEMUMQAAhihiAAAMUcQA\nABiiiAEAMEQRAwBgiCIGAMAQRQwAgCGKGAAAQxQxAACGKGIAAAxRxAAAGKKIAQAwRBEDAGCIIgYA\nwBBFDACAIYoYAABDFDEAAIYoYgAADFHEAAAYoogBADBEEQMAYIgiBgDAEEUMAIAhihgAAEMUMQAA\nhihiAAAMUcQAABiiiAEAMJTltsPZs2e1evVqXbhwQRkZGZozZ44WLFiQiGwAAKQ81yLOzMzU448/\nruHDh+vSpUuaNWuWxo4dq+Li4kTkAwAgpbl+NV1YWKjhw4dLknr06KHi4mKdO3cu7sEAAEgHHfod\n8enTp3X8+HF99atfjVceAADSiutX09dcunRJy5cv15o1a9SjRw/PE4TDYVVUnGyzffDgIcrMzPR8\nHL9zxWMev3nC4bCkgDIzr7//icwXOaay8mPXeZyWlqj7Jerc/WSOl0SuRbTrzfLc/Yi2XpHXaazO\nKXIuv9e2l58jP3n8HidSrF6Hku31DPHjqYibm5u1fPlylZaW6v777/d04MLCXElSeXm5VjyzVTl5\nRa1/1lB7TmVr56mkpCTq2JqaoKc5CgqCrfNEmyvaPH6O3d6YyPkjRea5cPqYsnN73zJftDG9bx9+\ny6yNddV67o/nlZP3Wes2tzW+1Xm5cVv3aJnd1ipW+bysRUeO25HnV/L2fCWTaOsVeZ22d05efkZu\nNZffa9vLz5GfPF5+Zrzw8jqUyONc09GfPySOpyJes2aNhg4dqu9///ueD1xdXSdJCoXqlZNXpGCv\nATf9eShU37pPpFCo3tMckceINle0fTp67PbG3OocouVpqK3ylC9yjBcdXeNrf+6Hn8xuWWKZz20t\nOnLcjjy/kvfnK5lEOwcv16CfNY3Fte3158jPsf1cp5G8vA4l8jjSFyXc2fPCrXXmjY7r74gPHDig\nbdu2ad++fZoxY4ZmzpypPXv2+J4QAABc5/qJ+J577tGxY8cSkQUAgLTDnbUAADBEEQMAYIgiBgDA\nEEUMAIAhihgAAEMUMQAAhihiAAAMUcQAABiiiAEAMEQRAwBgiCIGAMAQRQwAgCGKGAAAQxQxAACG\nKGIAAAxRxAAAGKKIAQAwRBEDAGCIIgYAwBBFDACAIYoYAABDFDEAAIYoYgAADFHEAAAYoogBADBE\nEQMAYIgiBgDAEEUMAIAhihgAAEMUMQAAhlyLeM2aNRozZoymTZuWiDwAAKQV1yKeNWuWNmzYkIgs\nAACkHdciHjVqlHr27JmILAAApJ0s6wCSFA6HVVFxsvVxZeXHrmOclpY2+0U+9rKPl2NHGxO5Tzgc\nlhRQZmbGLcfFIp8Xscjn5bhejhNtTGSeWOXzMr/Xa+DUqVMKherbzRyrfF2RnzVNVBYpdtd2tOty\n8OAhyszM9JUVySWye65J9HMclyL+8f97sfW/qz77WNKdbfYpKAiqsDBXklReXq4Vz2xVTl6RJOnC\n6WPqffvwW87RWFet5/54Xjl5n7VuixznZR8vx442Jto+2bm9W8/By1x+83kRi3yxytzemBvzxCqf\nl/m9XgM/f+V8mzyRmWORryvys6aJyuI3j5frtKH2nMrWzlNJSUm7x6mpCbbZduPrnVexOs41fsel\nssjukbw9x7EWlyKuuDyw9b8v1NfqtrbXk0KhelVX17X+d05ekYK9BkiSGmqrPM1z45j2xnnZx+3Y\n7Y2J3MfPXH7zeRGLfG7H9XqcaGPilc9t/s5cX36Ok6qSaS3ieW1HbrvxtSuaG79F8TomnseRvihh\nP+NSXWT33Li9o+vVmTc6nv75kuM4vicAAADtcy3iRx99VA899JBOnTqlCRMm6K233kpELgAA0oLr\nV9PPPfdcInIAAJCWuLMWAACGKGIAAAxRxAAAGKKIAQAwRBEDAGCIIgYAwBBFDACAIYoYAABDFDEA\nAIYoYgAADFHEAAAYoogBADBEEQMAYIgiBgDAEEUMAIAhihgAAEMUMQAAhihiAAAMUcQAABiiiAEA\nMEQRAwBgiCIGAMAQRQwAgCGKGAAAQxQxAACGKGIAAAxRxAAAGKKIAQAwRBEDAGDIUxHv2bNHDz74\noCZPnqxXXnkl3pkAAEgbrkXc0tKiX/7yl9qwYYP+8pe/aPv27frf//6XiGwAAKQ81yI+fPiw7rjj\nDg0YMEDdunXTlClTtHPnzkRkAwAg5bkWcVVVlfr379/6uG/fvjp37lxcQwEAkC6y4nHQQO3/Kdzc\nIkly6irUEG666c8bas+psvLj1seVlR+rofZ6uTfWhSQFbhoTuS0V9kn2fJwna8F53rwt8rUrmsjX\nMy9j4nkcSaqpCSoUqvc1NpVFrrHkf50LC7/hO0fAcRznVjscOnRIL7zwgjZs2CBJrX9Za8mSJb4n\nBQAAX3D9anrkyJGqrKzUmTNndPXqVW3fvl0TJ05MRDYAAFKe61fTmZmZeuKJJ7Ro0SI5jqPvfOc7\nKi4uTkQ2AABSnutX0wAAIH64sxYAAIYoYgAADFHEAAAY8l3EXu4//atf/UoPPPCASktLdezYMd8h\n05XbGm/btk3Tp0/X9OnT9fDDD+s///mPQcquz+u91A8fPqy77rpLf/vb3xKYLjV4WeP9+/drxowZ\nmjp1qubPn5/ghF2f2xrX1NRo8eLFKi0t1bRp0/T2228bpOza1qxZozFjxmjatGnt7uOr9xwfwuGw\nc//99zunT592rl696kyfPt05ceLETfu8++67zg9/+EPHcRzn0KFDzpw5c/xMlba8rPHBgwedzz//\n3HEcx9m9ezdr7IOXdb6234IFC5wlS5Y4f/3rXw2Sdl1e1vjzzz93vv3tbztnz551HMdxLly4YBG1\ny/Kyxi+88ILz7LPPOo7zxfqOHj3aaWpqsojbZX3wwQfO0aNHnalTp0b9c7+95+sTsZf7T+/cuVMz\nZsyQJH3ta19TXV2dzp8/72e6tORljb/+9a8rNze39b+rqqosonZpXu+lXlZWpsmTJ6ugoMAgZdfm\nZY23bdumBx54QH379pUk1rmDvKxxnz59dOnSJUnSpUuXlJ+fr6ysuNxcMWWNGjVKPXv2bPfP/fae\nryL2cv/pc+fOqV+/fjftQ1F419F7fP/pT3/Sfffdl4hoKcXLOldVVWnHjh2aN29eouOlBC9rXFFR\nodraWs2fP1+zZ8/Wli1bEh2zS/OyxnPnztV///tfjRs3TqWlpVqzZk2iY6Y8v73H26EUsG/fPr39\n9tt64403rKOkpKefflqrVq1qfezwT+9jLhwO6+jRo3rttdfU0NCghx56SHfffbfuuOMO62gp4+WX\nX9awYcNUVlamyspKLVy4UFu3blWPHj2so6U9X0Xct29fffrpp62Pq6qqVFRUdNM+RUVFOnv2bOvj\ns2fPtn7tBHde1liSjh8/rp///Odav3698vLyEhkxJXhZ5yNHjuiRRx6R4ziqqanRnj17lJWVxa1e\nPfKyxn379lWvXr1022236bbbbtOoUaN0/PhxitgjL2v84YcfaunSpZKkQYMG6fbbb9fJkyc1cuTI\nhGZNZX57z9dX017uPz1x4sTWr5cOHTqknj17qk+fPn6mS0te1vjTTz/V8uXLtW7dOg0aNMgoadfm\nZZ137typnTt3ateuXXrwwQf15JNPUsId4PX14sCBAwqHw2psbNThw4e5lW4HeFnj4uJi/fOf/5Qk\nnT9/XhUVFRo4cKBF3C7tVt+I+e09X5+I27v/9B/+8AcFAgF997vf1fjx47V7925NmjRJ2dnZWrt2\nrZ+p0paXNf7tb3+r2tpaPfXUU3IcR1lZWXrzzTeto3cpXtYZneNljYuLizVu3DhNnz5dGRkZmjt3\nroYOHWodvcvwssZLlizRmjVrNH36dDmOo1WrVik/P986epfy6KOPav/+/bp48aImTJigH//4x2pq\naup073GvaQAADHFnLQAADFHEAAAYoogBADBEEQMAYIgiBgDAEEUMAIAhihgAAEMUMQAAhv4/Gm++\nPoLu66YAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f7d4838e610>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df[(df['AdGroupName'] == 'Brand')&(df['Impressions']>10)].hist('CTR',bins=np.arange(101)/100.0,\n",
+    "                                                              cumulative=1,normed=1,histtype='step')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "df[(df['AdGroupName'] == 'Brand')]."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1305,6 +1336,15 @@
     "                                                                   'Clicks':sum,\n",
     "                                                                   'Criteria':'count'})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
