--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2501,7 +2501,50 @@
    },
    "outputs": [],
    "source": [
-    "df[df['AllConversions']>3][]"
+    "df[df['AllConversions']>3][[u'KeywordMatchType',u'MonthsWithImpressions',\n",
+    "                         u'Impressions', u'ImpressionAssistedConversions',\n",
+    "                              u'Clicks',      u'ClickAssistedConversions',\n",
+    "                                 u'CTR',                  u'QualityScore',\n",
+    "                             u'CostEUR',                u'AllConversions',\n",
+    "                         u'Conversions',          u'CostPerAllConversion',\n",
+    "                   u'CostPerConversion',                    u'BounceRate',\n",
+    "                     u'AveragePosition',              u'AveragePageviews',\n",
+    "                   u'AverageTimeOnSite',            u'PercentNewVisitors',\n",
+    "                         u'KeywordType']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([       u'AccountDescriptiveName',                  u'CampaignName',\n",
+       "                         u'AdGroupName',                      u'Criteria',\n",
+       "                    u'KeywordMatchType',         u'MonthsWithImpressions',\n",
+       "                         u'Impressions', u'ImpressionAssistedConversions',\n",
+       "                              u'Clicks',      u'ClickAssistedConversions',\n",
+       "                                 u'CTR',                  u'QualityScore',\n",
+       "                             u'CostEUR',                u'AllConversions',\n",
+       "                         u'Conversions',          u'CostPerAllConversion',\n",
+       "                   u'CostPerConversion',                    u'BounceRate',\n",
+       "                     u'AveragePosition',              u'AveragePageviews',\n",
+       "                   u'AverageTimeOnSite',            u'PercentNewVisitors',\n",
+       "                         u'KeywordType'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
