--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
-    "import seaborn as sn"
+    "import seaborn as sns"
    ]
   },
   {
@@ -2502,15 +2502,11 @@
    "outputs": [],
    "source": [
     "df[df['AllConversions']>3][[u'KeywordMatchType',u'MonthsWithImpressions',\n",
-    "                         u'Impressions', u'ImpressionAssistedConversions',\n",
-    "                              u'Clicks',      u'ClickAssistedConversions',\n",
-    "                                 u'CTR',                  u'QualityScore',\n",
-    "                             u'CostEUR',                u'AllConversions',\n",
-    "                         u'Conversions',          u'CostPerAllConversion',\n",
-    "                   u'CostPerConversion',                    u'BounceRate',\n",
-    "                     u'AveragePosition',              u'AveragePageviews',\n",
-    "                   u'AverageTimeOnSite',            u'PercentNewVisitors',\n",
-    "                         u'KeywordType']]"
+    "                            u'ImpressionAssistedConversions',u'ClickAssistedConversions',\n",
+    "                            u'QualityScore',u'CostPerAllConversion',\n",
+    "                            u'KeywordType',u'BounceRate',\n",
+    "                            u'AveragePosition', u'AveragePageviews',\n",
+    "                            u'AverageTimeOnSite',u'PercentNewVisitors']]"
    ]
   },
   {
