--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2519,6 +2519,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us move away from \"LastClick\" by considering "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {
