--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2495,6 +2495,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def setGroup(x):\n",
+    "  if x['AllConversti']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {
     "collapsed": false
