--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2502,7 +2502,7 @@
    "outputs": [],
    "source": [
     "def setGroup(x):\n",
-    "  if x['AllConversti']"
+    "  if x['AllConversi']"
    ]
   },
   {
