--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2502,7 +2502,18 @@
    "outputs": [],
    "source": [
     "def setGroup(x):\n",
-    "  if x['AllConversi']"
+    "  if x['AllConversions'] > 3:\n",
+    "    return 'Converter'\n",
+    "  else:\n",
+    "    return 'Other'\n",
+    "  \n",
+    "def setSubGroup(x):\n",
+    "  if x['AllConversions'] > 900:\n",
+    "    return 'Converter - High'\n",
+    "  elif x['AllConversions'] > 900\n",
+    "    \n",
+    "  else:\n",
+    "    return 'Other'"
    ]
   },
   {
