--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2495,9 +2495,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -2508,12 +2508,17 @@
     "    return 'Other'\n",
     "  \n",
     "def setSubGroup(x):\n",
-    "  if x['AllConversions'] > 900:\n",
+    "  if x['AllConversions'] > 99:\n",
     "    return 'Converter - High'\n",
-    "  elif x['AllConversions'] > 900\n",
-    "    \n",
+    "  elif x['AllConversions'] > 9:\n",
+    "    return 'Converter - Mid'\n",
+    "  elif x['AllConversions'] > 3:\n",
+    "    return 'Converter - Low'\n",
     "  else:\n",
-    "    return 'Other'"
+    "    return 'Other'\n",
+    "  \n",
+    "df['Group'] = df.apply(setGroup,axis=1)\n",
+    "df['SubGroup'] = df.apply(setSubGroup,axis=1)"
    ]
   },
   {
@@ -2535,7 +2540,7 @@
     }
    ],
    "source": [
-    "g = sns.pairplot(data=df[df['AllConversions']>3][[u'KeywordMatchType','CTR',\n",
+    "g = sns.pairplot(data=df[df['Group'] == 'Converter'][[u'KeywordMatchType','CTR',\n",
     "                                                  'CostPerAllConversion',\n",
     "                            u'QualityScore',u'AveragePosition',                          \n",
     "                            u'BounceRate', u'AveragePageviews',\n",
