--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2600,7 +2600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us move away from \"LastClick\" by considering "
+    "Let us move away from \"LastClick\" by considering ClickAssistedConversions"
    ]
   },
   {
@@ -2610,7 +2610,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df[df['Group'] == 'Other'].groupby(by=(df[df['Group'] == 'Other']['Group'])[['AllConversions','CostEUR',\n",
+    "                                           'Impressions','Clicks',\n",
+    "                                           'Criteria']].aggregate({'AllConversions':sum,\n",
+    "                                                                   'CostEUR':sum,\n",
+    "                                                                   'Impressions':sum,\n",
+    "                                                                   'Clicks':sum,\n",
+    "                                                                   'Criteria':'count'})"
+   ]
   },
   {
    "cell_type": "code",
