--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2605,13 +2605,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Impressions</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">CostEUR</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Clicks</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">AllConversions</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Criteria</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>Criteria</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>178732.032500</td>\n",
+       "      <td>3.751079e+06</td>\n",
+       "      <td>469581.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>178732.032500</td>\n",
+       "      <td>3.751079e+06</td>\n",
+       "      <td>469581.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>178732.032500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>469581.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>178732.032500</td>\n",
+       "      <td>3.751079e+06</td>\n",
+       "      <td>469581.166667</td>\n",
+       "      <td>165030</td>\n",
+       "      <td>165030</td>\n",
+       "      <td>165030</td>\n",
+       "      <td>165030</td>\n",
+       "      <td>165030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>1067.433333</td>\n",
+       "      <td>50452.889167</td>\n",
+       "      <td>9.507356e+05</td>\n",
+       "      <td>134708.416667</td>\n",
+       "      <td>1067.433333</td>\n",
+       "      <td>50452.889167</td>\n",
+       "      <td>9.507356e+05</td>\n",
+       "      <td>134708.416667</td>\n",
+       "      <td>1067.433333</td>\n",
+       "      <td>50452.889167</td>\n",
+       "      <td>...</td>\n",
+       "      <td>134708.416667</td>\n",
+       "      <td>1067.433333</td>\n",
+       "      <td>50452.889167</td>\n",
+       "      <td>9.507356e+05</td>\n",
+       "      <td>134708.416667</td>\n",
+       "      <td>2192</td>\n",
+       "      <td>2192</td>\n",
+       "      <td>2192</td>\n",
+       "      <td>2192</td>\n",
+       "      <td>2192</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Impressions                 \\\n",
+       "                         ClickAssistedConversions        CostEUR   \n",
+       "ClickAssistedConversions                                           \n",
+       "False                                    0.000000  178732.032500   \n",
+       "True                                  1067.433333   50452.889167   \n",
+       "\n",
+       "                                                       \\\n",
+       "                           Impressions         Clicks   \n",
+       "ClickAssistedConversions                                \n",
+       "False                     3.751079e+06  469581.166667   \n",
+       "True                      9.507356e+05  134708.416667   \n",
+       "\n",
+       "                                          CostEUR                 \\\n",
+       "                         ClickAssistedConversions        CostEUR   \n",
+       "ClickAssistedConversions                                           \n",
+       "False                                    0.000000  178732.032500   \n",
+       "True                                  1067.433333   50452.889167   \n",
+       "\n",
+       "                                                       \\\n",
+       "                           Impressions         Clicks   \n",
+       "ClickAssistedConversions                                \n",
+       "False                     3.751079e+06  469581.166667   \n",
+       "True                      9.507356e+05  134708.416667   \n",
+       "\n",
+       "                                           Clicks                  ...     \\\n",
+       "                         ClickAssistedConversions        CostEUR   ...      \n",
+       "ClickAssistedConversions                                           ...      \n",
+       "False                                    0.000000  178732.032500   ...      \n",
+       "True                                  1067.433333   50452.889167   ...      \n",
+       "\n",
+       "                                                  AllConversions  \\\n",
+       "                                 Clicks ClickAssistedConversions   \n",
+       "ClickAssistedConversions                                           \n",
+       "False                     469581.166667                 0.000000   \n",
+       "True                      134708.416667              1067.433333   \n",
+       "\n",
+       "                                                                      \\\n",
+       "                                CostEUR   Impressions         Clicks   \n",
+       "ClickAssistedConversions                                               \n",
+       "False                     178732.032500  3.751079e+06  469581.166667   \n",
+       "True                       50452.889167  9.507356e+05  134708.416667   \n",
+       "\n",
+       "                                         Criteria                              \\\n",
+       "                         ClickAssistedConversions CostEUR Impressions  Clicks   \n",
+       "ClickAssistedConversions                                                        \n",
+       "False                                      165030  165030      165030  165030   \n",
+       "True                                         2192    2192        2192    2192   \n",
+       "\n",
+       "                                   \n",
+       "                         Criteria  \n",
+       "ClickAssistedConversions           \n",
+       "False                      165030  \n",
+       "True                         2192  \n",
+       "\n",
+       "[2 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[df['Group'] == 'Other'].groupby(by=(df[df['Group'] == 'Other']['Group'])[['AllConversions','CostEUR',\n",
+    "df[df['Group'] == 'Other'].groupby(by=(df[df['Group'] == 'Other']['ClickAssistedConversions'] > 0))[['ClickAssistedConversions','CostEUR',\n",
     "                                           'Impressions','Clicks',\n",
     "                                           'Criteria']].aggregate({'AllConversions':sum,\n",
     "                                                                   'CostEUR':sum,\n",
